syntax = "proto3";
package rangeserver;

message RangeId {
    string keyspace_id = 1;
    string range_id = 2;
}

service RangeServer {
    // Our PreFetch rpc accepts a PreFetchRequest and returns HelloReplies
    rpc PreFetch (PrefetchRequest) returns (PrefetchResponse);
}

message PrefetchRequest {
    // Request message contains the range and the key to prefetch
    repeated RangeId range = 1;
    repeated bytes key = 2;
}

message PrefetchResponse {
    // Reply contains the greeting message
    string status = 1;
}